try to fix zoom on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,11 @@
 .center {
     text-align: center;
 }
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    select,
+    textarea,
+    input {
+        font-size: 16px;
+    }
+}
